# document-search

./: .editorconfig  .gitignore  .prettierrc.yml  Makefile  README.md
.github/workflows/: .note  extractor-ci.yml  server-ci.yml  web-ci.yml
extractor/: .env.example  pyproject.toml
extractor/src/: api.py  loop.py  main.py
extractor/src/core/: api.py  loop.py
extractor/src/stubs/: coordinator_pb2.py  coordinator_pb2_grpc.py
extractor/src/utils/: coordinator.py  extraction.py  types.py
extractor/tests/: test_api.py  test_extraction.py
server/: .env.example  Cargo.toml  build.rs
server/migrations/: 0.1.0.sql
server/protos/: coordinator.proto
server/src/: main.rs  protos.rs  types.rs
server/src/apis/: mod.rs  queue.rs  storage.rs
server/src/core/: mod.rs  queue.rs  storage.rs
server/src/embeddings/: mod.rs  openai.rs
server/src/services/: coordinator.rs  interface.rs  mod.rs  queue.rs  storage.rs
server/src/utils/: mod.rs  reranker.rs
templates/: .note  build.py  macros.jinja  requirements.txt  template.html
templates/emails/: change_email_address.jinja  confirm_signup.jinja  invite_user.jinja  magic_link.jinja  reauthentication.jinja  reset_password.jinja
web/: .env.example  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js
web/src/: app.css  app.html
web/src/lib/: index.ts  stores.ts  types.ts
web/src/lib/components/cards/: alert.svelte
web/src/lib/components/fields/: input.svelte  new-password.svelte
web/src/lib/components/navs/: sidebar.svelte
web/src/lib/components/utils/: button.svelte  input.svelte  title.svelte  wordmark.svelte
web/src/lib/utils/: validations.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/(auth)/: +layout.svelte
web/src/routes/(auth)/create-account/: +page.svelte
web/src/routes/(auth)/reset-password/: +page.svelte
web/src/routes/(auth)/sign-in/: +page.svelte
web/src/routes/(dashboard)/: +layout.svelte
web/src/routes/(landing)/: +layout.svelte  +page.svelte
web/static/: .note
