[tool.poetry]
name = "dl-extractor"
version = "0.1.0"
description = "An extractor worker to extract PDFs for DocuLens."
authors = ["Edwin Kys"]
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.poetry.scripts]
cli = "src.main:cli"
