[tool.poetry]
name = "dl-extractor"
version = "0.1.0"
description = "An extractor worker to extract PDFs for DocuLens."
authors = ["Edwin Kys"]
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.5"
aio-pika = "^9.5.4"
boto3 = "^1.35.92"
docling = "^2.14.0"

# API Server
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
httpx = "^0.28.1"

# gRPC
grpcio = "^1.68.1"
grpcio-tools = "^1.68.1"

# Utils
requests = "^2.32.3"
python-dotenv = "^1.0.1"
rich = "^13.9.4"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.poetry.scripts]
cli = "src.main:cli"
