[package]
name = "dl-server"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.11.0", features = ["serde", "v4", "fast-rng"] }
clap = "4.5.23"

# Server
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
prost = "0.13.4"
axum = "0.7.9"

# Tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Serialization
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

# Utils
dotenv = "0.15.0"
url = "2.5.4"
semver = "1.0.24"
reqwest = "0.12.11"

[dependencies.sqlx]
version = "0.8.2"
features = ["runtime-tokio", "macros", "postgres"]

[build-dependencies]
tonic-build = "0.12.3"
