[package]
name = "dl-server"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.11.0", features = ["serde", "v4", "fast-rng"] }
clap = "4.5.23"

# Server
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.9", features = ["multipart", "json"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
tonic = "0.12.3"
prost = "0.13.4"
tower = "0.5.2"
hyper = "1.5.2"

# Tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Serialization
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

# Utils
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
url = "2.5.4"
semver = "1.0.24"
reqwest = "0.12.11"
regex = "1.11.1"

[dependencies.sqlx]
version = "0.8.2"
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono"]

[build-dependencies]
tonic-build = "0.12.3"
