[package]
name = "dl-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = { version = "2.5.0", features = ["serde_json"] }
aws-config = { version = "1.5.12", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.67.0"
clap = "4.5.23"

# Server
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.9", features = ["multipart", "json"] }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
tonic = "0.12.3"
prost = "0.13.4"
hyper = "1.5.2"

# Tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Serialization
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

# Utils
uuid = { version = "1.11.0", features = ["serde", "v4", "fast-rng"] }
chrono = { version = "0.4.39", features = ["serde"] }
url = { version = "2.5.4", features = ["serde"] }
reqwest = { version = "0.12.11", features = ["json"] }
dotenv = "0.15.0"
semver = "1.0.24"
regex = "1.11.1"
async-trait = "0.1.85"

[dependencies.sqlx]
version = "0.8.2"
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono"]

[dev-dependencies]
axum-test = "16.4.1"
futures-lite = "2.5.0"

[build-dependencies]
tonic-build = "0.12.3"
